Fixed bug whre overflow editing bar wasnt shown

--- a/Client/AdminPage/admin.css
+++ b/Client/AdminPage/admin.css
@@ -33,7 +33,9 @@ z-index: 1;
 top: 0;
 right: 0;
 padding-top: 1em;
+padding-bottom: 1em;
 width:30%;
+overflow-y: scroll;
 }
 
 
@@ -91,7 +93,8 @@ body {
             border-bottom: 2px solid black;
             padding-left: 1em;
             padding-right:1em;
-            padding-bottom: 1em; 
+             
+            overflow-y: hidden;
       }
 
       .main {
